--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         # The repo name as used in
         # https://github.com/nix-community/NUR/blob/master/repos.json
         nurRepo:
-          - https://github.com/jechol/nur-packages
+          - jechol
         # Set this to cache your build results in cachix for faster builds
         # in CI and for everyone who uses your cache.
         #
@@ -52,5 +52,5 @@ jobs:
         # TODO switch to default nixpkgs channel once nix-build-uncached 1.0.0 is in stable
         run: NIXPKGS_ALLOW_INSECURE=1 nix run -I 'nixpkgs=channel:nixos-unstable' nixpkgs.nix-build-uncached -c nix-build-uncached ci.nix -A cacheOutputs
       - name: Trigger NUR update
-        if: ${{ matrix.nurRepo != 'jechol/nur-packages' }}
+        if: ${{ matrix.nurRepo != '' }}
         run: curl -XPOST "https://nur-update.herokuapp.com/update?repo=${{ matrix.nurRepo }}"
