--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,10 +32,11 @@ jobs:
         cachixName:
           - jechol
         nixPath:
-          - nixpkgs=channel:nixos-unstable
+          # - nixpkgs=channel:nixos-unstable
           - nixpkgs=channel:nixpkgs-unstable
-          - nixpkgs=channel:nixos-20.03
-    runs-on: ubuntu-latest
+          # - nixpkgs=channel:nixos-20.03
+        os: [ubuntu-18.04, macos-10.15]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2.3.2
