--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -31,7 +31,7 @@ jobs:
         # For this to work, you also need to set the CACHIX_SIGNING_KEY secret
         # in your repository settings in Github found at https://github.com/<your_githubname>/nur-packages/settings/secrets
         cachixName:
-          - jechol
+          - trevorite
         nixPath:
           # - nixpkgs=channel:nixos-unstable
           - nixpkgs=channel:nixpkgs-unstable
